# internal/handlers/user/user.go
@@ -13,6 +13,7 @@ import (
 type UserService interface {
 	SetIsActive(userID uint, isActive bool) (*domain.User, string, error)
 	GetReview(userID uint) (*[]domain.PullRequest, error)
+	GetPRsByStatus(userID uint, status string) (*[]domain.PullRequest, error)
 }
 
 type UserHandler struct {
@@ -28,8 +29,38 @@ func NewHandler(userService UserService) http.Handler {
 
 	r.Post("/setIsActive", handler.setIsActive)
 	r.Get("/getReview", handler.getReview)
+	r.Get("/getPR", handler.getPRsByStatus)
 
 	return r
+}
+
+func (h *UserHandler) getPRsByStatus(w http.ResponseWriter, r *http.Request) {
+	var req request.GetPRsByStatusRequest
+	if err := req.Bind(r); err != nil {
+		response.JSONError(w, http.StatusBadRequest, response.BAD_REQUEST, err.Error())
+
+		return
+	}
+
+	prs, err := h.userService.GetPRsByStatus(req.UserID, req.Status)
+	if err != nil {
+		var (
+			code         = mapper.HTTPStatusFromError(err)
+			errorMsg     = mapper.ErrorMessageFromError(err)
+			errorCodeMsg = mapper.ErrorCodeMessageFromError(err)
+		)
+
+		response.JSONError(
+			w,
+			code,
+			errorCodeMsg,
+			errorMsg,
+		)
+
+		return
+	}
+
+	response.JSONSuccess(w, http.StatusOK, response.NewGetPRsByStatusResponse(prs))
 }
 
 func (h *UserHandler) setIsActive(w http.ResponseWriter, r *http.Request) {
